Refactor to add CardInCollection support for UI